# StageGuard

./: LICENSE  README.md  environment.yml  pyproject.toml
configs/: actigraphy.yaml  bioradar.yaml  cardiorespiratory.yaml  mouse_eeg.yaml
examples/: demo.py
stageguard/: __init__.py  config.py  decoder.py  losses.py  metrics.py  sqi.py  wrapper.py
stageguard/backbones/: __init__.py  accusleep.py  base.py  usleep.py
stageguard/data/: __init__.py  actigraphy.py  base.py  bioradar.py  cardiorespiratory.py  mouse_eeg.py
tests/: conftest.py  test_backbones.py  test_config.py  test_decoder.py  test_losses.py  test_metrics.py  test_sqi.py  test_wrapper.py
